# CoreVideo

./: .gitignore  CMakeLists.txt  LICENSE  Launch-OBS-CoreVideo.cmd  README.md  SECURITY.md  site-worker.js  wrangler.jsonc
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  deploy-site.yml  release-windows.yml  security-scan.yml
buildspec/: macos.cmake  windows.cmake
cloudflare/: corevideo-docs-worker.js
cmake/: CoreVideoOAuthCallback-Info.plist.in
companion/companion-module-corevideo-obs/: package.json  tsconfig.json
companion/companion-module-corevideo-obs/src/: actions.ts  config.ts  feedbacks.ts  index.ts  obs-ws-client.ts  sidecar-client.ts  state.ts  variables.ts
data/locale/: en-US.ini
docs/: CNAME  CORE_PLUGIN_FUNCTIONALITY.md  PRODUCTION_CONSOLE_ARCHITECTURE.md  SIDECAR_OBS_CONTROL_ISSUES.md  SITE_DEPLOYMENT.md  ZOOM_MARKETPLACE_OAUTH.md  index.html
docs/policies/: data-retention-protection-policy.md  incident-management-response-policy.md  infrastructure-dependency-management-policy.md  privacy-policy.md  security-policy.md  vulnerability-management-policy.md
engine/src/: engine-audio.cpp  engine-audio.h  engine-video.cpp  engine-video.h  engine-writer.h  main.cpp
public/: _redirects  index.html
public/assets/: site.css
public/core-plugin/: index.html
public/docs/: index.html
public/documentation/: index.html
public/oauth/: index.html
public/privacy/: index.html
public/privacy-policy/: index.html
public/support/: index.html
public/terms/: index.html
public/terms-of-use/: index.html
scripts/: build-site.mjs  obs-scene-smoke-test.ps1  release-local.ps1  summarize-cppcheck-quality.py
sidecar/: CMakeLists.txt  sidecar.qrc
sidecar/data/applied/: 4-up-grid.applied.json
sidecar/data/looks/: eight-up-grid.json  five-up-feature.json  four-up-clean.json  news-breaking.json  news-desk.json  one-up-clean.json  panel-discussion.json  podcast-duo.json  podcast-pip.json  seven-up-feature.json  six-up-grid.json  solo-spotlight.json  speaker-screenshare.json  talk-show-classic.json  talk-show-warm.json  three-up-feature.json  two-up-clean.json
sidecar/data/templates/: 1-up.json  2-up-pip.json  2-up-sbs.json  3-up-feature.json  4-up-grid.json  5-up-feature.json  6-up-grid.json  7-up-feature.json  8-up-grid.json  speaker-screenshare.json  talk-show.json
sidecar/src/: audio-routing.h  command-palette.cpp  command-palette.h  director-automation.h  layout-template.cpp  layout-template.h  look-library.cpp  look-library.h  look-panel.cpp  look-panel.h  look-render-plan.cpp  look-render-plan.h  look.h  lower-third-controller.cpp  lower-third-controller.h  macro.h  macros-panel.cpp  macros-panel.h  main.cpp  mainwindow.cpp  mainwindow.h  me-bus.cpp  me-bus.h  obs-client.cpp  obs-client.h  obs-connect-dialog.cpp  obs-connect-dialog.h  obs-look-renderer.cpp  obs-look-renderer.h  overlay-panel.cpp  overlay-panel.h  overlay.h  participant-panel.cpp  participant-panel.h  preview-canvas.cpp  preview-canvas.h  scenes-panel.cpp  scenes-panel.h  settings-page.cpp  settings-page.h  (+16 more)
sidecar/tests/: catalog-test.cpp  lower-third-test.cpp  renderer-config-test.cpp
src/: cv-onboarding.cpp  cv-onboarding.h  cv-style.h  cv-widgets.cpp  cv-widgets.h  engine-ipc.h  hw-video-pipeline.cpp  hw-video-pipeline.h  oauth-callback-helper-macos.mm  oauth-callback-helper.cpp  obs-utils.cpp  obs-utils.h  obs-zoom-version.h.in  plugin-main.cpp  speaker-director.cpp  speaker-director.h  zoom-audio-delegate.cpp  zoom-audio-delegate.h  zoom-audio-router.cpp  zoom-audio-router.h  zoom-auth.cpp  zoom-auth.h  zoom-control-server.cpp  zoom-control-server.h  zoom-credentials.h.in  zoom-dock.cpp  zoom-dock.h  zoom-engine-client.cpp  zoom-engine-client.h  zoom-interpretation-audio-source.cpp  zoom-interpretation-audio-source.h  zoom-iso-panel.cpp  zoom-iso-panel.h  zoom-iso-recorder.cpp  zoom-iso-recorder.h  zoom-meeting.cpp  zoom-meeting.h  zoom-oauth.cpp  zoom-oauth.h  zoom-osc-server.cpp  (+24 more)
wiki/: Home.md  Privacy-Policy.md  Support.md  Terms-of-Use.md
